# nhlapi

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  run-tests
docs/: api.rst  clients.rst  conf.py  endpoints.rst  index.rst  install.rst  props.rst  quickstart.rst  utils.rst
nhlapi/: __init__.py  aio.py  clients.py  endpoints.py  props.py  sync.py  utils.py
scripts/: update-docs
tests/: test_endpoints.py  test_props.py  test_utils.py
