[tool.poetry]
name = "nhlapi"
version = "0.1.0"
description = ""
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = {version = "^2.19",optional = true}
aiohttp = {version = "^3.4",optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinxcontrib-fulltoc = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
